<resources>
    <string name="app_name">blueprint</string>
    <string name="select_blueprint">도면 선택</string>
    <string name="delete">삭제</string>
    <string name="update">수정</string>
    <string name="title">Title :</string>
    <string name="type_title">Type Title...</string>
    <string name="path">Path :</string>
    <string name="file_path">File path</string>
    <string name="call">불러오기</string>
    <string name="save">저장</string>
</resources>
